--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "watch": "test -- --watch",
+    "coverage": "test -- --coverage"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -42,6 +44,8 @@
     "jest": "^29.7.0",
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "msw": "^1.3.3",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.3.0",
