--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "test": "jest",
     "watch": "test -- --watch",
-    "coverage": "test -- --coverage"
+    "coverage": "test -- --coverage",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"  
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/cypress": "^10.0.1",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
@@ -41,6 +44,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "identity-obj-proxy": "^3.0.0",
